--- a/src/views/job-edit.ejs
+++ b/src/views/job-edit.ejs
@@ -83,7 +83,7 @@
             type="submit" 
             title="Salvar Dados">Salvar</button>
           <a 
-            href="#" 
+            href="/" 
             class="button gray open-modal"
             >
             <img 
